syntax = "proto3";

package v1.user_proto;

option go_package = "github.com/Park-Kwonsoo/Moving-server/api/protos/v1/user";

service UserService {
    rpc GetMyProfile(GetMyProfileReq) returns(GetMyProfileRes) {};
}

message User {
    int32 id = 1;
    string CreatedAt = 2;
    string UpdatedAt = 3;
    string DeletedAt = 4;
    
    string userId = 5;
    string userType = 6;
}

message Profile {
    int32 id = 1;
    string CreatedAt = 2;
    string UpdatedAt = 3;
    string DeletedAt = 4;

    User user = 5;
    string name = 6;
    string birth = 7;
    string gender = 8;
    string profileImg = 9;
}

message GetMyProfileReq {
    string token = 1;
}

message GetMyProfileRes {
    string rsltCd = 1;
    string rsltMsg = 2;
    Profile myProfile = 3;
}